# cloud_agent

./: .env.example  .gitignore  BLOG.md  CHANGELOG.md  CLAUDE.md  DEV_TASKS.md  GUIDE.md  README.md  TUTORIAL.md  WALKTHROUGH.md  calendar_client.py  email_poller.py  main.py  orchestrator.py  pyproject.toml
advanced-setup/: .env.example  .gitignore  README.md
docs/: deployment.md  tutorial.md
src/: adk_orchestrator.py  config.py  diary.py  identities.py  memory.py  orchestrator.py  poller.py  reminders.py  rules.py  scheduler.py  services.py  task_io.py  user_data.py  utils.py  weather.py
tests/: conftest.py  test_action_validation.py  test_agent_task.py  test_agent_task_edge_cases.py  test_agent_task_serialization.py  test_automation_tools.py  test_automation_tools_stress.py  test_calendar_tools_stress.py  test_config.py  test_config_stress.py  test_context.py  test_diary_stress.py  test_email_client_stress.py  test_error_messages.py  test_identities.py  test_identities_stress.py  test_integration_e2e.py  test_large_payloads.py  test_memory.py  test_memory_stress.py  test_memory_tools_stress.py  test_models_stress.py  test_orchestrator_agent_tasks.py  test_orchestrator_stress.py  test_personal_data_tools.py  test_personal_data_tools_stress.py  test_poller.py  test_poller_edge_cases.py  test_reminders_stress.py  test_research_tools_stress.py  test_rules.py  test_rules_stress.py  test_scheduler.py  test_scheduler_stress.py  test_services.py  test_sessions.py  test_sessions_stress.py  test_system_admin_tools_stress.py  test_task_concurrency.py  test_task_context.py  (+6 more)
(+68 files in other folders)
